fixed gap between links

--- a/greeting card/style.css
+++ b/greeting card/style.css
@@ -38,6 +38,7 @@ h1::after {
   margin-top: 20px;
   display: flex;
   justify-content: space-around;
+  gap: 20px;
 }
 
 .card-links a {
